--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 cp866-rs = { git = "https://github.com/madwareru/cp866-rs", version = "0.1.2"}
 bin-serialization-rs = { git = "https://github.com/madwareru/bin-serialization-rs", version = "0.1.3"}
 regex = "1.3.9"
+bitflags = "1.0"
